      - BinaryVersion:
        - Fixed reading 'Task' field.
    - System:
      - Resolvers/Native:
        - Don't synchronize source packages if the option
          'cupt::resolver::synchronize-source-versions' is set to 'none'.
        - Fixed a minor regression since 0.3.0 in determining version weight,
          including "essentialness" of the version.
    - Core:
      - 'version_string_regex': allow debian part of the version contain '_',
        however Cupt::Cache::Package will print a warning in this case.
        (Closes: #541268)

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 11 Aug 2009 19:40:52 +0300

cupt (0.5.2) unstable; urgency=low

  * cupt:
    - Fixed a regression since 0.5.1 when using '+' and '-' expression
      suffixes.
  * Cupt:
    - System:
      - Worker:
        - While building action dependencies graph, deal properly with
          'abc' depends on 'x | y | ...' cases when 'x' is going to be
          removed and 'y' is going to be installed. Thanks to Daniel Moerner.
          (Closes: #539953)
        - While building action dependencies graph, ensure that if the action
          dependency has even one "not eat" property it won't be lost even in
          complicated merge scenarios (Closes: #540957).
        - While splitting heterogeneous actions, don't require additional dpkg
          flags not for 'configure' action, but for last one, which may differ.
    - Config:
      - Added configuration option 'dir::etc::preferencesparts'.
    - Cache:
      - Honor 'dir::etc::preferencesparts' option.
    - Download:
      - Manager,Method,Methods/Debdelta:
        - Implemented debdelta integration. Big thanks to A Mennucc1.
      - Progress:
        - New method 'get_overall_downloaded_size'.
      - Progresses/Console:
        - Print also overall downloaded size on exit.
        - Print 'failed to download' messages as warnings, not as errors.
