@@ -13,6 +13,9 @@ cupt (0.5.3) UNRELEASED; urgency=low
           'cupt::resolver::synchronize-source-versions' is set to 'none'.
         - Fixed a minor regression since 0.3.0 in determining version weight,
           including "essentialness" of the version.
+        - Fixed a crash when performing a deep search for versions that have
+          other than original version have, but still satisfiable
+          pre-dependency relation expression.
     - Core:
       - 'version_string_regex': allow debian part of the version contain '_',
         however Cupt::Cache::Package will print a warning in this case.
